# oc_2_project_38

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
notebooks/: data_loading.ipynb  motor_segmentation.ipynb  nuclei_segmentation.ipynb
src/neuroscan/: __main__.py  _version.py  io.py  segment.py
