[project]
name = "neuroscan"
description = "A piepline to segment nuclei and motor neurons from neurospheres."
authors = [
  {name = "A. Corbat", email = "agustin.corbat@scilifelab.se"}
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["dependencies", "optional-dependencies", "version"]

[build-system]
requires = ["setuptools>=62.6.0", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "I"]

[project.scripts]
neuroscan = "neuroscan.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuroscan"]

[tool.setuptools_scm]
write_to = "src/neuroscan/_version.py"