[metadata]
name = neuroscan
url = https://github.com/BIIFSweden/AI4Life_OC2_2024_38
author = SciLifeLab BioImage Informatics Facility (BIIF)
license = MIT
license_files = LICENSE
description = A 3D human motor neuron disease platform for high throughput drug screening
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

[options]
install_requires = file: requirements.txt
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
